--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ololade Otemade",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mongoose": "^6.1.5"
